--- a/src/Index.html
+++ b/src/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="icon" href="/logo.png"/>
     <title>Calendario Académico ESPE - Consulta</title>
 </head>
 <body>
@@ -52,7 +53,11 @@
         <div class="arrow-down">↓</div>
     </div>
     <!-- chat bot aqui -->
-
+    <script
+    src="https://unpkg.com/react-stackai@latest/dist/vanilla/vanilla-stackai.js"
+    data-project-url="https://www.stack-ai.com/embed/02fde183-a772-424e-8dfc-d091f7dac69d/0ebe1b0b-ec5f-4e22-9cb6-72425213d9df/67a1742128b40dc0d19b5bb1">
+  </script>
+        
 
     <footer>
         <div class="footer-content">
