--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="/logo.png"/>
     <title>Calendario Académico ESPE - Consulta</title>
 </head>
 <body>
     <header>
         <div class="header-content">
-            <img src="../Image/logo.png" alt="ESPE" class="logo">
+            <img src="Image/logo.png" alt="ESPE" class="logo">
             <div class="title-section">
                 <h1>Calendario Académico ESPE</h1>
                 <p>Período SII-2024 (Octubre 2024 - Marzo 2025)</p>
@@ -33,13 +33,13 @@
                 </div>
                 <h2>Calendario Academico</h2>
                 <iframe 
-                    src="../DOC/calendario_academico_sii_2024_v1_22ago24_legal.pdf" 
+                    src="DOC/calendario_academico_sii_2024_v1_22ago24_legal.pdf" 
                     class="pdf-viewer"
                     title="Calendario Académico PDF">
                 </iframe>
                 <h2>Calendario Ingles</h2>
                 <iframe 
-                    src="../DOC/calendario_academico_sii_2024_idiomas-20sep24_legal.pdf" 
+                    src="DOC/calendario_academico_sii_2024_idiomas-20sep24_legal.pdf" 
                     class="pdf-viewer"
                     title="Calendario Académico PDF">
                 </iframe> 
@@ -54,16 +54,9 @@
     </div>
     <!-- chat bot aqui -->
     <script
-<<<<<<< HEAD
-        src="https://unpkg.com/react-stackai@latest/dist/vanilla/vanilla-stackai.js"
-        data-project-url="https://www.stack-ai.com/embed/02fde183-a772-424e-8dfc-d091f7dac69d/0ebe1b0b-ec5f-4e22-9cb6-72425213d9df/67a1742128b40dc0d19b5bb1">
-    </script>
-=======
     src="https://unpkg.com/react-stackai@latest/dist/vanilla/vanilla-stackai.js"
     data-project-url="https://www.stack-ai.com/embed/02fde183-a772-424e-8dfc-d091f7dac69d/0ebe1b0b-ec5f-4e22-9cb6-72425213d9df/67a1742128b40dc0d19b5bb1">
   </script>
-        
->>>>>>> ddc92607335bb47737d80f3c7854fdee0debfc27
 
     <footer>
         <div class="footer-content">
